welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: '(' expected but identifier found.
while !sortieTrouvee();
      ^